--- a/react-app/src/components/Tickets/Tickets.css
+++ b/react-app/src/components/Tickets/Tickets.css
@@ -1,17 +1,13 @@
 .tickets-container {
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
-    margin-top: 100px;
+    margin-top: 70px;
     font-size: 16px;
-    /* padding-left: 200px; */
-    border: 1px solid red;
 }
 
 .ticket-carousel {
-    /* display: flex; */
     margin: 0 auto;
-    width: 40%;
+    width: 42%;
 }
 
 .ticket-card {
@@ -19,7 +15,23 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
-    width: 300px;
+    border-radius: 24px;
+    width: 290px;
+    height: 260px;
+    margin: 0 auto;
+    background-color: white;
+
+}
+
+.ticket-img {
+    width: 100%;
+    height: 140px;
+    border-radius: 24px 24px 0 0;
+}
+
+.map-container {
+    padding: 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 800px) {
