--- a/react-app/src/components/AddFavoriteForm/AddFavoriteForm.css
+++ b/react-app/src/components/AddFavoriteForm/AddFavoriteForm.css
@@ -21,10 +21,11 @@
     width: fit-content;
     font-size: 24px;
     margin-top: 10px;
+    color: rgba(0, 0, 0, 0.651);
 }
 
 .favorite-button:hover {
-    color: red;
+    color: rgb(250, 0, 0);
 }
 
 .unfavorite-button {
@@ -34,9 +35,9 @@
     width: fit-content;
     font-size: 24px;
     margin-top: 10px;
-    color: red;
+    color: rgb(250, 0, 0);
 }
 
 .unfavorite-button:hover {
-    color: black;
+    color: rgba(0, 0, 0, 0.651);
 }
