--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -38,7 +38,7 @@
     margin: 6px 4px;
     padding: 0 10px 20px 14px;
     border-radius: 20px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.911);
     transition: box-shadow .3s ease-in;
     /* height: 700px; */
     overflow-y: hidden;
