--- a/react-app/src/components/Tickets/Tickets.css
+++ b/react-app/src/components/Tickets/Tickets.css
@@ -17,7 +17,7 @@
     border: 1px solid black;
     border-radius: 24px;
     width: 290px;
-    height: 260px;
+    height: 320px;
     margin: 0 auto;
     background-color: white;
 
@@ -33,6 +33,13 @@
     padding: 0;
     margin: 0;
 }
+
+/* .test-heart {
+    position: absolute;
+    bottom: 0;
+    margin-top: 10px;
+    padding: 0;
+} */
 
 @media screen and (max-width: 800px) {
     .tickets-container {
