--- a/react-app/src/components/UserFavorites/UserFavorites.css
+++ b/react-app/src/components/UserFavorites/UserFavorites.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: whitesmoke;
+    background-color: rgba(245, 245, 245, 0.897);
     width: 400px;
     height: 200px;
     border-radius: 20px;
