--- a/react-app/src/components/AddItemForm/AddItemForm.css
+++ b/react-app/src/components/AddItemForm/AddItemForm.css
@@ -5,9 +5,9 @@
     align-items: center;
     padding: 10px 100px 0px 100px;
 }
-.form-modal-container {
+/* .form-modal-container {
     padding-bottom: 100px;
-}
+} */
 
 .add-item-inputs {
     /* display: flex;
