--- a/react-app/src/components/LoginFormModal/LoginForm.css
+++ b/react-app/src/components/LoginFormModal/LoginForm.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 100px 0px 100px;
+    padding: 0 100px 10px 100px;
     border-radius: 20px;
 }
 
@@ -12,7 +12,7 @@
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    padding: 74px 100px 0px 100px;
+    padding: 0 100px 0 100px;
 }
 
 .demo-button {
@@ -21,4 +21,17 @@
     background-color: rgba(3, 91, 150, 0.877);
     color: white;
     padding: 10px 28px;
+}
+
+.login-h1 {
+    padding: 10px 0 140px 0;
+}
+
+.error {
+    display: flex;
+    align-items: center;
+    color: red;
+    height: 28px;
+    max-width: 210px;
+    margin-top: 10px;
 }
