--- a/react-app/src/components/UsersItems.js/UsersItems.css
+++ b/react-app/src/components/UsersItems.js/UsersItems.css
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin-top: 220px;
-    height: 88vh;
+    margin-top: 120px;
+    /* height: 88vh; */
     background-size: 100%;
 }
 
