--- a/react-app/src/components/Teams/Teams.css
+++ b/react-app/src/components/Teams/Teams.css
@@ -1,6 +1,8 @@
 .team-gallery {
     display: flex;
+    flex-direction: column;
     /* padding: 30px 0; */
+    align-items: center;
     justify-content: center;
     margin-top: 80px;
 }
