--- a/react-app/src/components/Favorites/Favorites.css
+++ b/react-app/src/components/Favorites/Favorites.css
@@ -1,3 +1,14 @@
 .favorites-header {
     text-align: center;
 }
+
+.items-header-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.favorite-card {
+    margin: 0 auto;
+}
