--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -35,7 +35,7 @@
     /* max-width: 280px; */
     min-height: 400px;
     height: 500px;
-    margin: 6px 4px;
+    margin: 0 auto;
     padding: 0 10px 20px 14px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.911);
