--- a/react-app/src/components/Teams/Teams.css
+++ b/react-app/src/components/Teams/Teams.css
@@ -1,10 +1,39 @@
+.team-gallery-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* width: 90%; */
+    margin: 0 auto;
+    margin-top: 80px;
+}
+
+.supported {
+    align-self: center;
+}
+
 .team-gallery {
     display: flex;
     flex-direction: column;
     /* padding: 30px 0; */
     align-items: center;
     justify-content: center;
-    margin-top: 80px;
+    overflow-x: scroll;
+}
+
+.team-gallery::-webkit-scrollbar {
+    height: 14px;
+    border-radius: 10px;
+}
+
+.team-gallery::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+.team-gallery::-webkit-scrollbar-thumb {
+    border: 1px solid rgb(158, 158, 158);
+    background-color: rgb(0, 0, 0, 0.7);
+    border-radius: 20px;
 }
 
 .badge-gallery {
