--- a/react-app/src/components/Items/Items.css
+++ b/react-app/src/components/Items/Items.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 0px;
-    /* height: 100%; */
 }
 
 .item-gallery {
@@ -12,7 +11,6 @@
     max-width: 100%;
     /* height: 1200px; */
     /* max-width: 1000px; */
-    /* border: 1px solid black; */
 }
 
 .card-img {
@@ -28,6 +26,7 @@
 }
 
 .item-card {
+    border: 1px solid rgba(0, 0, 0, 0.075);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -35,7 +34,7 @@
     /* max-width: 280px; */
     min-height: 400px;
     height: 500px;
-    margin: 0 auto;
+    margin: 10px auto;
     padding: 0 10px 20px 14px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.911);
@@ -45,7 +44,7 @@
 }
 
 .item-card:hover {
-    box-shadow: 3px 3px 6px 6px rgba(194, 194, 194, 0.554);
+    box-shadow: 3px 3px 5px 5px rgba(194, 194, 194, 0.554);
 }
 
 .inner-card {
