--- a/react-app/src/components/ItemDetails/ItemDetails.css
+++ b/react-app/src/components/ItemDetails/ItemDetails.css
@@ -86,6 +86,10 @@
     /* margin: 100px auto; */
 }
 
+.heart-container {
+    margin-left: 28px;
+}
+
 @media screen and (max-width: 500px) {
     .item-details-page {
         max-width: 400px;
