--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -1,13 +1,28 @@
 .search-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: absolute;
-    background-color: aliceblue;
-    height: auto;
-    max-height: 1000px;
+    height: 160px;
+    padding: 20px 0;
+    background-color: rgb(250, 250, 250);
+    width: 100%;
+    transition: top .6s ease-out;
+    z-index: -1;
 }
 
 .results-hidden {
-    top: -2000px;
+    top: -800px;
+    left: 0;
 }
+
 .results-visible {
-    top: 50px;
+    top: 40px;
+    left: 0;
+}
+
+.result-card {
+    background-color: rgb(250, 250, 250);
+    width: 500px;
 }
