--- a/react-app/src/components/SearchBar/SearchBar.css
+++ b/react-app/src/components/SearchBar/SearchBar.css
@@ -12,7 +12,7 @@
     justify-content: center;
     position: absolute;
     height: 160px;
-    padding: 20px 0;
+    padding: 40px 0 10px 0;
     background-color: rgb(250, 250, 250);
     width: 100%;
     transition: top .6s ease-out;
@@ -20,12 +20,12 @@
 }
 
 .results-hidden {
-    top: -800px;
+    top: -300px;
     left: 0;
 }
 
 .results-visible {
-    top: 52px;
+    top: 60px;
     left: 0;
 }
 
