--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -16,9 +16,24 @@
   padding: 5px 0;
   margin: 0 auto;
   top: 0;
-  z-index: 2;
+  z-index: 10;
   background-color: white;
 }
+
+/* fixes css z index bug for slide out search results */
+.nav-background {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  padding: 5px 0;
+  margin: 0 auto;
+  top: 0;
+  z-index: -1;
+  background-color: white;
+}
+
 
 .nav-right-side-logged-in {
   display: flex;
